# ProgettoTravelAgentApi

./: README.md  pyproject.toml
travel_agent_api/: main.py
travel_agent_api/routes/: chat_router.py
travel_agent_api/services/: agent_service.py
travel_agent_api/tools/: chain_historical_expert.py  chain_travel_plan.py  flights_find.py  hotels_find.py
