[project]
name = "travel-agent-api"
version = "0.1.0"
description = ""
authors = [
    {name = "peppe2412",email = "peppeterrazzano79@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9.0"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "openai (>=1.109.1,<2.0.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "travel_agent_api"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
